[gd_scene load_steps=18 format=2]

[ext_resource path="res://BG/Background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/03_APompadourBoldSample.otf" type="DynamicFontData" id=2]
[ext_resource path="res://BG/QuestionsZone.png" type="Texture" id=3]
[ext_resource path="res://Scripts/BtnGrid.gd" type="Script" id=4]
[ext_resource path="res://Fonts/dynamic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/BarTime_BG.png" type="Texture" id=6]
[ext_resource path="res://Sprites/BarTime_FG.png" type="Texture" id=7]
[ext_resource path="res://Scripts/QuestionScreen.gd" type="Script" id=8]
[ext_resource path="res://Fonts/aAlloyInk.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://FX/click.wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/BtnSend.gd" type="Script" id=11]
[ext_resource path="res://Scripts/BtnSkip.gd" type="Script" id=12]
[ext_resource path="res://Scripts/RichTextLabel.gd" type="Script" id=13]
[ext_resource path="res://Scripts/ProgressBar.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 9 )

[node name="QuestionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sketch" type="TextureRect" parent="."]
anchor_left = -0.116
anchor_top = -0.087
anchor_right = 1.118
anchor_bottom = 1.133
margin_left = -40.216
margin_top = -76.184
margin_right = 91.168
margin_bottom = 189.856
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -384.0
margin_right = 512.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color( 0.466667, 0.27451, 0.533333, 0.878431 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -468.5
margin_top = -245.0
margin_right = 468.5
margin_bottom = 245.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -465.0
margin_top = -240.0
margin_right = 460.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategotyTitle" type="CenterContainer" parent="Control/VBoxContainer"]
margin_right = 925.0
margin_bottom = 50.0
rect_min_size = Vector2( 800, 50 )

[node name="ProgressBar" type="TextureProgress" parent="Control/VBoxContainer/CategotyTitle"]
margin_left = 137.0
margin_top = 18.0
margin_right = 787.0
margin_bottom = 32.0
size_flags_horizontal = 4
max_value = 5.0
step = 0.01
value = 5.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
stretch_margin_left = 125
script = ExtResource( 14 )

[node name="QuestionZone" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 54.0
margin_right = 925.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 250 )

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/QuestionZone"]
margin_right = 925.0
margin_bottom = 250.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/QuestionZone"]
margin_right = 925.0
margin_bottom = 250.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "What should they teach in school, but donâ€™t?"
align = 1
valign = 1
autowrap = true

[node name="AnswersZone" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 308.0
margin_right = 925.0
margin_bottom = 308.0

[node name="Answers" type="CenterContainer" parent="Control/VBoxContainer/AnswersZone"]
margin_right = 925.0

[node name="BtnGrid" type="GridContainer" parent="Control/VBoxContainer/AnswersZone/Answers"]
margin_left = 462.0
margin_right = 462.0
grow_horizontal = 2
grow_vertical = 2
columns = 4
script = ExtResource( 4 )

[node name="CenterContainer" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -341.5
margin_top = -80.0
margin_right = 341.5
margin_bottom = -28.0
size_flags_horizontal = 4
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
margin_right = 683.0
margin_bottom = 52.0

[node name="Exit" type="Button" parent="Control/CenterContainer/HBoxContainer"]
margin_right = 225.0
margin_bottom = 52.0
rect_min_size = Vector2( 225, 50 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send" type="Button" parent="Control/CenterContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 454.0
margin_bottom = 52.0
rect_min_size = Vector2( 225, 50 )
custom_fonts/font = SubResource( 2 )
text = "Enviar"
script = ExtResource( 11 )

[node name="Skip" type="Button" parent="Control/CenterContainer/HBoxContainer"]
margin_left = 458.0
margin_right = 683.0
margin_bottom = 52.0
rect_min_size = Vector2( 225, 50 )
custom_fonts/font = SubResource( 2 )
text = "Omitir"
script = ExtResource( 12 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -413.0
margin_top = -106.0
margin_right = 413.0
margin_bottom = 6.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.796078, 0.592157, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0.839216, 0.141176, 0.0705882, 1 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=70]Se acabo el tiempo"
text = "Se acabo el tiempo"
fit_content_height = true
scroll_active = false
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="done" from="Control/VBoxContainer/CategotyTitle/ProgressBar" to="Control/CenterContainer/HBoxContainer/Skip" method="_on_ProgressBar_done"]
[connection signal="done" from="Control/VBoxContainer/CategotyTitle/ProgressBar" to="Control/CenterContainer/HBoxContainer/Send" method="_on_ProgressBar_done"]
[connection signal="done" from="Control/VBoxContainer/CategotyTitle/ProgressBar" to="RichTextLabel" method="_on_ProgressBar_done"]
[connection signal="done" from="Control/VBoxContainer/CategotyTitle/ProgressBar" to="." method="_on_ProgressBar_done"]
[connection signal="done" from="Control/VBoxContainer/CategotyTitle/ProgressBar" to="Control/VBoxContainer/AnswersZone/Answers/BtnGrid" method="_on_ProgressBar_done"]
[connection signal="answer" from="Control/VBoxContainer/AnswersZone/Answers/BtnGrid" to="." method="_on_BtnGrid_answer"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/Skip" to="." method="_on_Skip_pressed"]
